<resources>
    <string name="app_name">Slagalica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">\@danilo2312</string>
    <string name="nav_header_subtitle">dan23.ftn@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pode\u0161avanja</string>
    <string name="rank_list_tab_title">Plasmani</string>
    <string name="search_players_tab_title">Igra\u010di</string>
    <string name="main_tab_title">Igraj</string>

    <string name="menu_home">Po\u010detna</string>
    <string name="menu_profile">Moj profil</string>
    <string name="menu_logout">Odjavi se</string>
    <string name="switch_theme">No\u0107ni re\u017eim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="large_text">
        "Material is the metaphor."
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic."
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics."
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts."
        "Bold, graphic, intentional."
        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience."
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user."
        "Motion provides meaning."
        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design."
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize."
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent."
    </string>
    <string name="large_text_2">"3D world."
        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness."
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis."
        "Light and shadow."
        </string>
    <string name="random_match">Dodeli mi protivnika</string>
    <string name="friendly_match">Izazivam prijatelja</string>
    <string name="title_activity_splash_screen">U\u010ditavanje</string>
    <string name="title_activity_login">Prijava na sistem</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Lozinka</string>
    <string name="action_sign_in">Prijavi se</string>
    <string name="action_sign_in_short">Prijavi se</string>
    <string name="welcome">"Dobro do\u0161li !"</string>
    <string name="invalid_username">Neispravno korisni\u010dko ime / email</string>
    <string name="invalid_password">Lozinka mora biti du\u017ea od 5 karaktera</string>
    <string name="login_failed">"Prijava neuspe\u0161na"</string>
    <string name="prompt_email_or_username">Email / Korisni\u010dko ime</string>
    <string name="prompt_username">Korisni\u010dko ime</string>
    <string name="prompt_repeat_password">Ponovljena lozinka</string>
    <string name="action_sign_up">Registruj se</string>
    <string name="action_sign_up_short">Registruj se</string>
    <string name="title_activity_register">Registracija</string>
    <string name="already_registered">Ima\u0161 nalog?</string>
    <string name="not_registered">Nema\u0161 nalog?</string>
    <string name="to_login">Pre\u0111i na prijavu</string>
    <string name="to_register">Pre\u0111i na registraciju</string>
    <string name="menu_login">Prijavi se</string>
    <string name="search_players">Pretra\u017ei igra\u010de…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture_description">Profilna slika</string>
    <string name="guest_user">Gost</string>
    <string name="on_logout_toast">Odjavljeni ste - Gost</string>
    <string name="on_profile_toast">Moj profil</string>
    <string name="on_homepage_toast">Po\u010detna</string>
    <string name="leave_game_dialog">Napusti igru?</string>
    <string name="leave_game_confirm">Potvrdi</string>
    <string name="leave_game_cancel">Odustani</string>
    <string name="leave_game_dialog_title">Napu\u0161tanjem me\u010da odri\u010dete se osvojenih poena…</string>
    <string name="leave_game_successful_info">Napustili ste igru.</string>
    <string name="title_activity_search_users">SearchUsersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="on_search_users_toast">Pretraga igra\u010da</string>
    <string name="menu_search_users">Korisnici</string>
    <string name="friendly_match_btn_alt">Prijavi se da bi izazvao prijatelja!</string>
    <string name="on_profile_pic_save">Odabrana slika je sa\u010duvana.</string>
    <string name="on_profile_pic_choosing">Izaberi sliku</string>
    <string name="start_match_challenge">Izazovi na meč!</string>
    <string name="remove_friend">Ukloni iz prijatelja</string>
    <string name="challenge_sent_await_response">" je izazvan, \u010deka se odgovor…"</string>
    <string name="removed_friend_msg">" je uklonjen iz liste prijatelja."</string>
    <string name="add_friend">Dodaj za prijatelja!</string>
    <string name="show_user_profile">Pogledaj profil…</string>
    <string name="added_friend_msg">" je dodat za prijatelja."</string>
    <string name="not_enough_tokens_to_play">Nemate Token za igranje.</string>
    <string name="countdown_until_rank_refresh"> A\u017euriranje za: </string>

</resources>