<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorActivityBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.RegisterActivity">

    <ImageView
        android:id="@+id/logoRegister"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@mipmap/ic_default_profile_round"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30sp"
        app:layout_constraintTop_toBottomOf="@id/logoRegister"
        app:layout_constraintBottom_toTopOf="@id/to_login_wrapper"
        >
        <LinearLayout
            android:id="@+id/usernameRegWrapper"
            android:background="@drawable/custom_border_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:paddingHorizontal="5dp"
            android:orientation="horizontal">
            <EditText
                android:drawableStart="@drawable/ic_user"
                android:padding="10sp"
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/blue_dark_2"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="?colorSecondary"
                android:textColorHighlight="?colorSecondaryVariant"
                android:textSize="21sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/emailRegWrapper"
            android:background="@drawable/custom_border_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            >
            <EditText
                android:drawableStart="@drawable/ic_email"
                android:padding="10sp"
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/blue_dark_2"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="?colorSecondary"
                android:textColorHighlight="?colorSecondaryVariant"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordRegWrapper"
            android:background="@drawable/custom_border_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            >
            <EditText
                android:drawableStart="@drawable/ic_pass"
                android:padding="10sp"
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/blue_dark_2"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="?colorSecondary"
                android:textColorHighlight="?colorSecondaryVariant"
                android:textSize="21sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/repeatPasswordRegisterWrapper"
            android:background="@drawable/custom_border_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            >
            <EditText
                android:drawableStart="@drawable/ic_pass"
                android:padding="10sp"
                android:id="@+id/repeatPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/blue_dark_2"
                android:hint="@string/prompt_repeat_password"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="?colorSecondaryVariant"
                android:textColorHighlight="?colorSecondary"
                android:textSize="21sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginHorizontal="20dp"
            android:padding="2dp">
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorPrimaryVariant"
                android:gravity="center"
                android:text="@string/action_sign_up"
                android:textColor="?colorSecondary"
                android:textSize="16sp"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/to_login_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?colorOnPrimary"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_smoked"
                android:textColor="?colorPrimaryVariant"
                android:text="@string/already_registered"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                />

            <Button
                android:id="@+id/toLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_login"
                android:textColor="?colorSecondary"
                android:textSize="15sp"
                android:gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>